--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE=movie-api-db
-MONGO_USER=Georges
-MONGO_PASSWORD=Soleil123
-MONGO_CLUSTER=cluster0.oxuwk.mongodb.net
+MONGO_DATABASE="movie-api-db"
+MONGO_USER="Georges"
+MONGO_PASSWORD="Soleil123"
+MONGO_CLUSTER="cluster0.oxuwk.mongodb.net"
